--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -4,13 +4,14 @@ import '@fontsource-variable/onest';
 import Head from '../components/Head.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+import Posthog from '../components/posthog.astro';
 
 interface Props {
 	title: string;
 	favIcon?: string;
 }
 
-const { title, favIcon = "/favicon.ico" } = Astro.props;
+const { title, favIcon = '/favicon.ico' } = Astro.props;
 ---
 <!doctype html>
 <html lang="en" class="scroll-smooth">
@@ -18,6 +19,7 @@ const { title, favIcon = "/favicon.ico" } = Astro.props;
 		<Head favIcon={favIcon} />
 		<title>{title}</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, viewport-fit=cover" />
+		<Posthog />
 	</head>
 	<body class="flex flex-col justify-between min-h-full bg-neutral-950 overflow-x-hidden">
 		<div class="absolute top-0 z-[-2] min-h-full w-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"></div>
