--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -3,6 +3,7 @@ import '../styles/global.css';
 import '@fontsource-variable/onest';
 import Head from '../components/Head.astro';
 import Footer from '../components/Footer.astro';
+import Posthog from '../components/posthog.astro';
 
 interface Props {
 	title: string;
@@ -14,6 +15,7 @@ const { title, favIcon = '/favicon.ico' } = Astro.props;
 <!doctype html>
 <html lang="en" class="scroll-smooth">
 	<head>
+		<Posthog />
 		<!-- Katex -->
 		<link
 			rel="stylesheet"
